Dec 27, 2010 - chris
o when using HAM_PARTIAL in combination with Transactions, HAM_INV_PARAMETER
    is now returned. In previous versions of hamsterdb, this combination was
    allowed. If you need this implemented then please tell me.

Dec 26, 2010 - chris
o when using HAM_PARTIAL and the record->size is <= 8 then error 
    HAM_INV_PARAMETER is returned. In previous versions, this combination
    returned false results. Reason is because hamsterdb uses a compressed,
    efficient storage for such records, and they do not support partial
    access.

Sep 15, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.6

Sep 12, 2010 - chris
o the unix daemon was ported to a Win32 Service (which can also run in
    foreground)

Sep 07, 2010 - chris
o the tutorial is no longer part of the Doxygen files; instead it's now 
    online in a wiki: http://wiki.github.com/cruppstahl/hamsterdb
o several functions are now deprecated:
    use ham_open_ex instead of ham_open
    use ham_create_ex instead of ham_create
    use ham_env_open_ex instead of ham_env_open
    use ham_env_create_ex instead of ham_env_create

Aug 31, 2010 - chris
o fixed compilation on newest ArchLinux (gcc 4.5.1) - thanks, zebul666

Aug 28, 2010 - chris
o created MSVC projects for the server and the new samples; all MSVC
        projects and workspaces were updated to Visual Studio 2009

Aug 26, 2010 - chris
o ham_flush is now deprecated, use ham_env_flush instead; both functions
	had very similar functionality

Aug 25, 2010 - chris
o renamed ham/hamserver.h to ham/hamsterdb_srv.h; all symbols were renamed
    from hamserver_XXX to ham_srv_XXX
o removed the dependency to protobuf-c; now directly using google's protobuf
    (for C++)

Aug 11, 2010 - chris
o improved the documentation in hamsterdb.h

Aug 11, 2010 - chris
o added a unix daemon (tools/hamsrvd.c) which can serve multiple Environments.