@@ -1,3 +1,10 @@
+Dec 29, 2010 - chris
+o Direct access (HAM_DIRECT_ACCESS) is now disabled if Transactions are 
+    enabled; in such cases functions will return HAM_INV_PARAMETER. 
+    In previous versions Direct Access was anyway not possible in combination
+    with Transactions, because Transactions were not possible with In-Memory
+    Databases.
+
 Dec 27, 2010 - chris
 o when using HAM_PARTIAL in combination with Transactions, HAM_INV_PARAMETER
     is now returned. In previous versions of hamsterdb, this combination was
